--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.movieListHeader {
+  padding: 10px;
+  position: relative;
+  top: 15px;
+}
+
 .movies {
   display: flex;
   justify-content: space-around;
@@ -14,13 +20,13 @@
   padding: 8px;
 }
 
-textarea {
-  padding: 10px;
-  margin: 10px;
+.photo {
+  height: 285px;
+  width: 185px;
 }
 
 .poster {
-  height: 350px;
+  height: 325px;
   width: auto;
 }
 
