--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -45,6 +45,10 @@
   transition: .2s;
 }
 
+.typeHeader {
+  width: 88.5%
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
